--- a/public/styles.css
+++ b/public/styles.css
@@ -9,8 +9,20 @@ small {
   width: 100%;
 }
 button {
+  background: rgb(228, 208, 226);
   float: right;
   margin-right: 20px;
+  color: #795369;
+  height: 50px;
+  width: 72px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  border: 0;
+  border-radius: 4px;
+  transition: all 200ms ease-in-out;
+}
+button:hover {
+  background: #795369;
+  color: #fff;
 }
 input {
   border-radius: 4px;
